--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "customer-api",
   "version": "1.0.0",
   "description": "A simple API to handle customer interactions",
-  "main": "server.js",
+  "main": "src/server.ts",
   "scripts": {
+    "start": "nodemon src/server.ts",
     "test": "jest",
     "build": "tsc"
   },
@@ -18,9 +19,18 @@
   },
   "homepage": "https://github.com/sim-ware/customer-api#readme",
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.2",
     "jest": "^27.0.4",
+    "nodemon": "^2.0.7",
     "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
+  },
+  "dependencies": {
+    "@types/sqlite3": "^3.1.7",
+    "express": "^4.17.1",
+    "sqlite3": "^5.0.2"
   }
 }
