Creates services for cusomters, items, orders, and orderItems and tests for functions within to scaffold logic for first route getCustomerOrderHistory

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon src/server.ts",
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "db-test": "ts-node sqlite3test.ts"
   },
   "repository": {
     "type": "git",
