--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
+    "@types/uuid": "^8.3.0",
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
     "ts-jest": "^27.0.3",
@@ -32,6 +33,7 @@
   "dependencies": {
     "@types/sqlite3": "^3.1.7",
     "express": "^4.17.1",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "uuid": "^3.4.0"
   }
 }
